--- a/OpenGLCourseApp/triangle_vertex/CMakeLists.txt
+++ b/OpenGLCourseApp/triangle_vertex/CMakeLists.txt
@@ -6,7 +6,8 @@ project(${TARGET_NAME} VERSION 0.1 LANGUAGES CXX)
 #include_directories(${TARGET_NAME} PUBLIC ${GLEW_LIB_DIR} ${GLFW_LIB_DIR})
 if(OPENGL_FOUND)
 	add_executable(${TARGET_NAME} main.cpp)
-	target_link_libraries(${TARGET_NAME} PUBLIC ${GLEW_LIB_DIR} ${GLFW_LIB_DIR} ${OPENGL_LIBRARIES})
+	target_link_libraries(${TARGET_NAME} PUBLIC Shader)
+    target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
