Restructured the OpenGl code with libraries and demo

--- a/OpenGLCourseApp/CMakeLists.txt
+++ b/OpenGLCourseApp/CMakeLists.txt
@@ -1,7 +1,11 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.20)
+cmake_policy(SET CMP0079 NEW)
 
 set(TARGET_NAME OpenGLCourseApp)
-project(${TARGET_NAME} VERSION 0.1 LANGUAGES CXX)
+project(${TARGET_NAME} LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 find_package(OpenGL REQUIRED)
 
@@ -10,16 +14,13 @@ set(GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ExternalLibs/GLFW/include/)
 set(GLEW_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ExternalLibs/GLEW/lib/Release/Win32/glew32.lib)
 set(GLFW_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ExternalLibs/GLFW/lib-vc2022/glfw3.lib)
 
-set(GLEW_DLL ${CMAKE_CURRENT_SOURCE_DIR}/../ExternalLibs/GLEW/bin/Release/Win32/glew32.dll)
+##Make sure to add glew32.dll folder path to PATH variable
 
-
-#include_directories(${TARGET_NAME} PUBLIC ${GLEW_LIB_DIR} ${GLFW_LIB_DIR})
 if(OPENGL_FOUND)
 	include_directories(${GLEW_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
 endif()
 
 
-add_subdirectory(red_window)
-add_subdirectory(triangle_vertex)
 add_subdirectory(Library)
+add_subdirectory(Demo)
 
